# Whackamole

./: .gitignore  .scalafmt.conf  CMakeLists.txt  LICENSE  README.md  build.sbt
doc/: lstlisting-rust.sty  report.tex
doc/chapter/: appendix.tex  impl.tex  plan.tex  sum.tex
doc/res/code/: exampleOfSpinal.scala
doc/res/img/: arch.drawio  flowpath.drawio  primary-fsm.drawio  secondary-fsm.drawio
res/coe/: mole-hide.coe  mole-show.coe  numbers.coe  test.coe
rtl/: .gitignore
rtl/spinal/whackamole/: BoardTop.scala  Constants.scala  EmitVerilog.scala  GameConfig.scala  GameTop.scala  Layer.scala  Top.scala
rtl/spinal/whackamole/blackbox/: dvi_transmitter_top.scala  test_key.scala
rtl/spinal/whackamole/drivers/: Hdmi.scala  Keypad.scala  Tmds.scala  Vga.scala
rtl/spinal/whackamole/game/: GameController.scala  ScoreBoard.scala
rtl/spinal/whackamole/game/components/: GameAreaBackground.scala  Moles.scala  RoundDisp.scala  ScoreAreaBackground.scala  ScoreDisp.scala
rtl/spinal/whackamole/graphics/: Drawable.scala  GraphicsConfig.scala  Number.scala
rtl/spinal/whackamole/utils/: LSFR.scala
rtl/verilog/: asyn_rst_syn.v  dvi_encoder.v  dvi_transmitter_top.v  serializer_10_to_1.v  test_key.v
sim/: .gitignore  CMakeLists.txt
sim/src/: Canvas.cc  Canvas.h  CoeReader.cc  CoeReader.h  Common.h  GraphicsSignals.h  HWDut.cc  HWDut.h  Keypad.cc  Keypad.h  MainWindow.cc  MainWindow.h  Memory.cc  Memory.h  config.h.in  main.cc
utils/: Cargo.toml
utils/src/: main.rs
utils/src/coe/: coe.rs  mod.rs
